# flet-qii

./: book.ipynb  data.csv  data1.csv  data10.csv  data40.csv  pyproject.toml  test.py
src/core/: create_test_data.py
src/core/sys_analysis/: __init__.py  functional_completeness.py  matrix.py  puro.py
