[tool.poetry]
name = "flet-qii"
version = "0.1.0"
description = ""
authors = ["kiselevvn <wsxxx2020@gmail.com>"]
readme = "README.md"
packages = [{include = "flet_qii"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.22.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
networkx = "^3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
